[gd_scene load_steps=12 format=2]

[ext_resource path="res://img/circle.png" type="Texture" id=1]
[ext_resource path="res://Src/gamescreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/styleboxflat.stylebox" type="StyleBox" id=3]
[ext_resource path="res://Assets/UI/click.stylebox" type="StyleBox" id=4]
[ext_resource path="res://Assets/Font/Font_Style.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/UI/play.stylebox" type="StyleBox" id=6]
[ext_resource path="res://Assets/UI/play.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/UI/focus.stylebox" type="StyleBox" id=8]
[ext_resource path="res://Assets/Font/Gumela.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.305882, 0.403922, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0.0313726, 0.0235294, 0.0235294, 1 )
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
margin_top = 650.0
margin_right = 1280.0
margin_bottom = 725.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="play" type="Button" parent="Panel"]
anchor_left = 0.016
anchor_top = 0.208
anchor_right = 0.071
anchor_bottom = 0.792
margin_left = -0.368
margin_top = 0.0240002
margin_right = 0.366997
margin_bottom = -0.0240021
rect_pivot_offset = Vector2( 79.6935, 0 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
text = "Play"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Button" parent="Panel"]
anchor_left = 0.016
anchor_top = -1.528
anchor_right = 0.07
anchor_bottom = -0.944
margin_left = -0.368
margin_top = 0.0160065
margin_right = 0.389999
margin_bottom = -0.0319977
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "LEFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go" type="Button" parent="Panel"]
anchor_left = 0.016
anchor_top = -0.708
anchor_right = 0.072
anchor_bottom = -0.125
margin_left = -0.368
margin_top = -0.0239983
margin_right = 0.343994
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "GO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="Button" parent="Panel"]
anchor_left = 0.016
anchor_top = -2.361
anchor_right = 0.07
anchor_bottom = -1.778
margin_left = -0.368
margin_top = -0.00799561
margin_right = 0.389999
margin_bottom = 0.0160065
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "RIGHT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="idle" type="Button" parent="Panel"]
anchor_left = 0.016
anchor_top = -3.153
anchor_right = 0.07
anchor_bottom = -2.569
margin_left = -0.368
margin_top = 0.0160065
margin_right = 0.389999
margin_bottom = -0.0319977
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "WAIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clear" type="Button" parent="Panel"]
anchor_left = 0.933
anchor_top = 0.208
anchor_right = 0.984
anchor_bottom = 0.792
margin_left = 0.202942
margin_top = 0.0240002
margin_right = 0.0279541
margin_bottom = -0.0240021
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 5 )
text = "CLEAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.476
anchor_top = 0.14
anchor_right = 0.92
anchor_bottom = 0.861
margin_left = -473.835
margin_top = -22.1422
margin_right = -526.315
margin_bottom = -38.2171
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.087
anchor_right = 0.917
anchor_bottom = 1.0
margin_left = -0.00100708
margin_top = -1.0
margin_right = -0.0910645
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cur" type="Label" parent="Panel"]
anchor_left = 0.023
anchor_top = -9.39
anchor_right = 0.055
anchor_bottom = -8.81
margin_left = 17.4085
margin_top = 99.6513
margin_right = 15.9685
margin_bottom = 99.6514
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="circle" type="Sprite" parent="Panel"]
position = Vector2( 67.0359, -581.2 )
z_index = -1
texture = ExtResource( 1 )
[connection signal="pressed" from="Panel/play" to="Panel/play" method="_on_play"]
[connection signal="pressed" from="Panel/left" to="Panel/play" method="_on_left_pressed"]
[connection signal="pressed" from="Panel/go" to="Panel/play" method="_on_go_pressed"]
[connection signal="pressed" from="Panel/right" to="Panel/play" method="_on_right_pressed"]
[connection signal="pressed" from="Panel/idle" to="Panel/play" method="_on_idle_pressed"]
[connection signal="pressed" from="Panel/clear" to="Panel/play" method="_on_clear_pressed"]
[connection signal="pressed" from="Panel/Button" to="Panel/play" method="_on_hack"]
